// Vitest Snapshot v1

exports[`MovieRating > matches snapshot 1`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 2`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 3`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 4`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 5`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 6`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 7`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 8`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 9`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 10`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 11`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 12`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 13`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 14`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 15`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 16`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 17`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 18`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 19`] = `
"<div class=\\"circle-progress\\" data-pct=\\"100\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"0\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;

exports[`MovieRating > matches snapshot 20`] = `
"<div class=\\"circle-progress\\" data-pct=\\"0\\" data-v-ebb1aca2=\\"\\"><svg width=\\"36\\" height=\\"36\\" viewPort=\\"0 0 36 36\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" data-v-ebb1aca2=\\"\\">
    <circle stroke=\\"#164e63\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" data-v-ebb1aca2=\\"\\"></circle>
    <circle class=\\"progress_circle\\" stroke=\\"#22d3ee\\" r=\\"16\\" cx=\\"18\\" cy=\\"18\\" stroke-width=\\"4\\" fill=\\"none\\" stroke-dasharray=\\"100.53096491487338\\" stroke-dashoffset=\\"100.53096491487338\\" data-v-ebb1aca2=\\"\\"></circle>
  </svg></div>"
`;
